<resources>
    <string name="app_name">Nappipeli</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_increase">Increase</string>
    <string name="string_username">Nickname: %s</string>
    <string name="string_counter">-- %d --</string>
    <string name="string_prize">You won %s!</string>
    <string name="string_pressesUntilPrize">%d more presses until next prize!</string>
    <string name="string_inputUsername">your nickname</string>
    <string name="string_submit">Submit</string>
    <string name="title_activity_winners">Winners</string>
    <string name="string_refresh">Refresh</string>
    <string name="string_increase">Increase Value</string>
    <string name="title_activity_set_nickname">Set Nickname</string>
    <string name="string_nickname_too_long">The nickname can be %d characters or less.</string>
    <string name="string_nickname_empty">The nickname cannot be empty.</string>
    <string name="string_prize_tier">PRIZES</string>
    <string name="string_winners">WINNERS (last 10)</string>
</resources>
